# AnalisadorIACurriculo

./: .env  ai.py  analise.py  app.py  authenticate.py  create_job.py  credentials.json  database.py  db.json  download_cv.py  helper.py  pyproject.toml  teste.py  token.json
models/: analysis.py  file.py  job.py
